--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <section class="section-hero">
+    <header class="header">
+      <img class="logo" alt="Omnifood logo" src="./img/omnifood-logo.png" />
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li><a class="main-nav-link" href="">Section 1</a></li>
+          <li><a class="main-nav-link" href="">Section 2</a></li>
+          <li><a class="main-nav-link" href="">Section 3</a></li>
+          <li><a class="main-nav-link margin-right-sm" href="">Section 4</a></li>
+          <li><a class="main-nav-link nav-cta" href="">Section 5</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="section-hero">
       <div class="hero">
         <div class="hero-text-box">
           <h1 class="heading-primary">A healthy meal deliveryd to your door, every single day</h1>
@@ -37,6 +50,7 @@
           <img src="img/hero.png" class="hero-img" alt="" />
         </div>
       </div>
-    </section>
+      </section>
+    </main>
   </body>
 </html>
