--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
         </div>
       </div>
       </section>
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="heading-featured-in">As featured in</h2>
+          <div class="logo">
+            <img src="./img/logos/techcrunch.png" alt="">
+            <img src="./img/logos/business-insider.png" alt="">
+            <img src="./img/logos/the-new-york-times.png" alt="">
+            <img src="./img/logos/forbes.png" alt="">
+            <img src="./img/logos/usa-today.png" alt="">
+          </div>
+        </div>
+      </section>
       <section class="section-how">
         <div class="container">
           <span class="subheading">How it works</span>
@@ -93,8 +105,6 @@
           </div>
         </div>
       </section>
-
-      
     </main>
   </body>
 </html>
