--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <section class="section-featured">
         <div class="container">
           <h2 class="heading-featured-in">As featured in</h2>
-          <div class="logo">
+          <div class="logos">
             <img src="./img/logos/techcrunch.png" alt="">
             <img src="./img/logos/business-insider.png" alt="">
             <img src="./img/logos/the-new-york-times.png" alt="">
