--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/all.min.css" />
   </head>
   <body>
     <header class="header">
@@ -105,6 +106,31 @@
           </div>
         </div>
       </section>
+      <section class="section-meals">
+        <div class="container">
+          <span class="subheading">Sample Meals</span>
+          <h2 class="heading-secondary">
+            Omnifood AI chooses from 5,000+ recipes
+          </h2>
+        </div>
+        <div class="container grid grid--3-cols">
+          <div class="meal">
+            <img src="img/meals/meal-1.jpg" class="meal-img"/>
+            <span class="tag">Vegetarian</span>
+            <p class="meal-title">Japanese Gyozas</p>
+            <ul class="meal-attributes">
+              <li class="meal-attribute"><i class="fa-regular fa-fire"></i> <span>650 calories</span></li>
+              <li class="meal-attribute"><i class="fa-regular fa-fork-knife"></i> <span>NutriScore &reg; 74</span></li>
+              <li class="meal-attribute"><i class="fa-regular fa-star"></i> <span>4.9 rating (537)</span></li>
+            </ul>
+          </div>
+          <div class="meal">Meals</div>
+          <div class="list">List of diets</div>
+        </div>
+      </section>
     </main>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
