--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
             <span class="tag">Vegetarian</span>
             <p class="meal-title">Japanese Gyozas</p>
             <ul class="meal-attributes">
-              <li class="meal-attribute"><i class="fa-regular fa-fire"></i> <span>650 calories</span></li>
-              <li class="meal-attribute"><i class="fa-regular fa-fork-knife"></i> <span>NutriScore &reg; 74</span></li>
-              <li class="meal-attribute"><i class="fa-regular fa-star"></i> <span>4.9 rating (537)</span></li>
+              <li class="meal-attribute"><i class="fa-regular fa-fire"></i> <span><strong>650</strong> calories</span></li>
+              <li class="meal-attribute"><i class="fa-regular fa-fork-knife"></i> <span>NutriScore &reg; <strong>74</strong></span></li>
+              <li class="meal-attribute"><i class="fa-regular fa-star"></i> <span><strong>4.9</strong> rating (537)</span></li>
             </ul>
           </div>
           <div class="meal">Meals</div>
